# Pratica3_Computacao_Grafica

./: CMakeLists.txt  main.cpp
